// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card default 1`] = `
<DocumentFragment>
  <div
    class="css-1dauq5a"
    data-cy="card"
  >
    <div
      class="css-ysit7j"
    >
      Example Content
    </div>
  </div>
</DocumentFragment>
`;

exports[`Card with aspectRatio set 1`] = `
<DocumentFragment>
  <div
    class="css-1jnm1at"
    data-cy="card"
  >
    <div
      class="css-ysit7j"
    >
      Example Content
    </div>
  </div>
</DocumentFragment>
`;

exports[`Card with paddingSize set 1`] = `
<DocumentFragment>
  <div
    class="css-1dauq5a"
    data-cy="card"
  >
    <div
      class="css-sriq2i"
    >
      Example Content
    </div>
  </div>
</DocumentFragment>
`;
